# catboost_inference

./: .gitignore  README.md  entrypoint.sh  fastpool.py  pool_leak.py  poolonly_leak.py  predict_leak.py  predict_npcontiguous_leak.py
benchmarks/: akka-http-proto-results.txt  akka-http-results.txt  python-grpc-results.txt  rust-grpc-results.txt  rust-grpc-tonic-results.txt  rust-warp-proto-results.txt
memleak_check/: Dockerfile  README.md  docker-compose.yml  fastpool.py  poolonly_leak.py  predict_df_leak.py  predict_leak.py  train.py
memleak_check/rust/: Cargo.toml  README.md
python/grpc-server/: Makefile  cb_pb2.py  cb_pb2_grpc.py  predict.py  requirements.txt  server.py  test_call.sh
python/grpc-server/proto/: cb.proto
rust/: Cargo.toml
rust/grpc-server/: Cargo.toml  test_call.sh
rust/grpc-server/src/: client.rs  predict.rs  server.rs
rust/http-server/: Cargo.toml  build.rs
rust/http-server/proto/: cb.proto
rust/http-server/src/: client.rs
rust/src/: main.rs
scala/akka-http-catboost/: .gitignore  build.sbt
scala/akka-http-catboost/project/: scalapb.sbt
scala/akka-http-catboost/src/main/protobuf/: cb.proto
scala/akka-http-catboost/src/main/resources/: application.conf
scala/akka-http-catboost/src/main/scala/leosmerling/: Inference.scala  Routes.scala  Server.scala
scala/akka-http-catboost/src/test/scala/leosmerling/: UserRoutesSpec.scala
