[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "cb-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "cb-client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
catboost = { git = "https://github.com/catboost/catboost" }
log = "*"

[build-dependencies]
tonic-build = "0.6"
